--- a/public/perfil.html
+++ b/public/perfil.html
@@ -49,6 +49,16 @@
             <li><a class="dropdown-item admin-only" href="ventas.html">Ventas</a></li>
           </ul>
           </li>
+
+                  <li class="nav-item">
+          <a class="nav-link" href="index.html">Regresar</a>
+        </li>
+
+        		<li class="nav-item"><a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown">🎅</a></li>
+		<li class="nav-item"><a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown">🎄</a></li>
+		<li class="nav-item"><a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown">❄️</a></li>
+
+    
         </ul>
       </div>
     </div>
@@ -122,6 +132,47 @@
       <div class="snowflake">❆</div>
     </div>
   </div>
+
+  <div class="container">
+	<div class="snowflakes" aria-hidden="true">
+		<div class="snowflake">
+			❅
+		</div>
+		<div class="snowflake">
+			❆
+		</div>
+		<div class="snowflake">
+			❅
+		</div>
+		<div class="snowflake">
+			❆
+		</div>
+		<div class="snowflake">
+			❅
+		</div>
+		<div class="snowflake">
+			❆
+		</div>
+		<div class="snowflake">
+			❅
+		</div>
+		<div class="snowflake">
+			❆
+		</div>
+		<div class="snowflake">
+			❅
+		</div>
+		<div class="snowflake">
+			❆
+		</div>
+		<div class="snowflake">
+			❅
+		</div>
+		<div class="snowflake">
+			❆
+		</div>
+	</div>
+    </div>
 
   <footer class="footer">
     <div class="wrapper">
