--- a/public/ventas.html
+++ b/public/ventas.html
@@ -109,8 +109,6 @@
   <button class="btn-modal cerrar-btn btn-x" data-close="modal-registro" type="button">X</button>
 </dialog>
 
-        </li>
-
         <li class="nav-item">
           <a class="nav-link" href="#acerca">Nosotros</a>
         </li>
@@ -128,6 +126,10 @@
           </ul>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Regresar</a>
+        </li>
+
 		<li class="nav-item"><a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown">🎅</a></li>
 		<li class="nav-item"><a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown">🎄</a></li>
 		<li class="nav-item"><a class="nav-link active" href="#" role="button" data-bs-toggle="dropdown">❄️</a></li>
@@ -137,6 +139,48 @@
     </div>
   </div>
 </nav>
+
+
+<div class="container">
+	<div class="snowflakes" aria-hidden="true">
+		<div class="snowflake">
+			❅
+		</div>
+		<div class="snowflake">
+			❆
+		</div>
+		<div class="snowflake">
+			❅
+		</div>
+		<div class="snowflake">
+			❆
+		</div>
+		<div class="snowflake">
+			❅
+		</div>
+		<div class="snowflake">
+			❆
+		</div>
+		<div class="snowflake">
+			❅
+		</div>
+		<div class="snowflake">
+			❆
+		</div>
+		<div class="snowflake">
+			❅
+		</div>
+		<div class="snowflake">
+			❆
+		</div>
+		<div class="snowflake">
+			❅
+		</div>
+		<div class="snowflake">
+			❆
+		</div>
+	</div>
+    </div>
 
 <footer class="footer">
   
@@ -174,6 +218,9 @@
   <p class="footer p">&copy; 2025 Panadería Navideña. All rights reserved.</p>
 
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+ integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+ crossorigin="anonymous"></script>
 <script src="script.js"></script>
 </body>
 </html>
