--- a/public/perfil.html
+++ b/public/perfil.html
@@ -97,7 +97,7 @@
     <input type="password" id="edit-password" name="password">
 
     <label>Foto de Perfil:</label>
-    <input type="file" id="edit-imagen" accept="image/*">
+    <input type="file" id="edit-imagen" name="imagen" accept="image/*">
 
     <img id="preview-img" class="preview-img" style="margin-top:10px; display:none;">
 
