--- a/public/compra.html
+++ b/public/compra.html
@@ -31,16 +31,16 @@
 
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-        <!-- Botones para NO logueados -->
+        <!-- ✅ Botones para NO logueados - CORREGIDOS -->
         <li class="nav-item" id="nav-login-btn">
-          <button class="btn-modal" data-open="modal-login" type="button">
-            Inicio de sesión
+          <button class="btn btn-outline-light" data-open="modal-login" type="button">
+            🔐 Inicio de sesión
           </button>
         </li>
 
         <li class="nav-item" id="nav-registro-btn">
-          <button class="btn-modal" data-open="modal-registro" type="button">
-            Registrar
+          <button class="btn btn-outline-light ms-2" data-open="modal-registro" type="button">
+            📝 Registrar
           </button>
         </li>
 
@@ -54,8 +54,8 @@
 
         <!-- Botón logout -->
         <li class="nav-item d-none" id="nav-logout">
-          <button class="btn btn-danger btn-sm" id="logoutBtn">
-            Cerrar sesión
+          <button class="btn btn-danger btn-sm ms-2" id="logoutBtn">
+            🚪 Cerrar sesión
           </button>
         </li>
 
