--- a/public/perfil.html
+++ b/public/perfil.html
@@ -196,66 +196,68 @@
 <!-- MODAL RECARGAR SALDO (ADMIN) -->
 <!-- También corregir este modal -->
 <!-- ============================================== -->
-
-<dialog id="modal-recargar-saldo" class="modal-recargar" style="width: 90%; max-width: 900px;">
   <button class="btn-modal cerrar-btn btn-x" data-close="modal-recargar-saldo">X</button>
-  <h2>💰 Recargar Saldo de Usuario</h2>
+<dialog id="modal-recargar-saldo-simple" style="width: 90%; max-width: 500px;">
+  <button class="btn-modal cerrar-btn btn-x" data-close="modal-recargar-saldo-simple" type="button">X</button>
+  
+  <h2>💰 Recargar Mi Saldo</h2>
 
-  <!-- ✅ Tabla de usuarios para seleccionar -->
-  <div class="usuarios-lista" style="max-height: 300px; overflow-y: auto; margin-bottom: 20px;">
-    <table class="table table-striped table-hover">
-      <thead class="table-dark">
-        <tr>
-          <th>ID</th>
-          <th>Nombre</th>
-          <th>Email</th>
-          <th>Saldo Actual</th>
-          <th>Acción</th>
-        </tr>
-      </thead>
-      <tbody id="tablaUsuariosRecarga"></tbody>
-    </table>
+  <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 20px; border-radius: 10px; margin: 20px 0; color: white;">
+    <div style="text-align: center;">
+      <div style="font-size: 1.1em; opacity: 0.9; margin-bottom: 10px;">
+        👤 <span id="recarga-usuario-nombre">Usuario</span>
+      </div>
+      <div style="font-size: 0.9em; opacity: 0.8; margin-bottom: 10px;">
+        Tu saldo actual:
+      </div>
+      <div style="font-size: 2.5em; font-weight: bold; color: #ffd700; text-shadow: 0 0 15px rgba(255,215,0,0.5);">
+        <span id="recarga-usuario-saldo">$0.00</span>
+      </div>
+    </div>
   </div>
 
-  <!-- ✅ Formulario de recarga -->
-  <form id="formRecargarSaldo" style="background: #f8f9fa; padding: 20px; border-radius: 10px;">
-    <h4 style="color: #333;">Usuario Seleccionado:</h4>
-    
-    <div style="margin: 15px 0;">
-      <label style="color: #333;"><b>ID Usuario:</b></label>
-      <input type="number" id="recargar-id" name="id_usuario" readonly 
-             style="background: #e9ecef; cursor: not-allowed; color: #333; padding: 8px; width: 100%; border: 1px solid #ccc; border-radius: 5px;" required>
-    </div>
+  <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 10px;">
+    <label style="display: block; margin-bottom: 10px; font-size: 1.1em; color: #ffd700;">
+      <b>💵 Monto a Recargar:</b>
+    </label>
+    <input 
+      type="number" 
+      id="recarga-monto-input" 
+      placeholder="Ej: 500.00" 
+      step="0.01" 
+      min="0.01" 
+      max="100000"
+      style="width: 100%; padding: 12px; font-size: 1.2em; border: 2px solid #ffd700; border-radius: 8px; text-align: center; background: white; color: #333;"
+      required
+    >
+    <small style="display: block; margin-top: 8px; opacity: 0.8;">
+      Monto mínimo: $0.01 | Máximo: $100,000
+    </small>
+  </div>
 
-    <div style="margin: 15px 0;">
-      <label style="color: #333;"><b>Nombre:</b></label>
-      <input type="text" id="recargar-nombre" readonly 
-             style="background: #e9ecef; cursor: not-allowed; color: #333; padding: 8px; width: 100%; border: 1px solid #ccc; border-radius: 5px;">
-    </div>
+  <div style="display: flex; gap: 10px; margin-top: 25px;">
+    <button 
+      type="button" 
+      class="btn btn-success" 
+      onclick="procesarRecargaSaldo()" 
+      style="flex: 1; padding: 12px; font-size: 1.1em;">
+      ✅ Confirmar Recarga
+    </button>
+    <button 
+      type="button" 
+      class="btn btn-secondary" 
+      data-close="modal-recargar-saldo-simple" 
+      style="flex: 1; padding: 12px;">
+      ❌ Cancelar
+    </button>
+  </div>
 
-    <div style="margin: 15px 0;">
-      <label style="color: #333;"><b>Saldo Actual:</b></label>
-      <input type="text" id="recargar-saldo-actual" readonly 
-             style="background: #e9ecef; cursor: not-allowed; color: #333; padding: 8px; width: 100%; border: 1px solid #ccc; border-radius: 5px;">
-    </div>
-
-    <div style="margin: 15px 0;">
-      <label style="color: #333;"><b>💵 Monto a Recargar:</b></label>
-      <input type="number" id="recargar-monto" name="monto" 
-             step="0.01" min="0.01" max="100000" placeholder="Ej: 500.00" 
-             style="color: #333; padding: 8px; width: 100%; border: 1px solid #ccc; border-radius: 5px;" required>
-    </div>
-
-    <div style="display: flex; gap: 10px;">
-      <button type="submit" class="btn btn-success" style="flex: 1;">
-        ✅ Confirmar Recarga
-      </button>
-      <button type="button" class="btn btn-secondary" 
-              onclick="document.getElementById('formRecargarSaldo').reset();" style="flex: 1;">
-        🔄 Limpiar
-      </button>
-    </div>
-  </form>
+  <div style="margin-top: 20px; padding: 15px; background: rgba(255,215,0,0.1); border-left: 4px solid #ffd700; border-radius: 5px;">
+    <small style="color: #ffd700;">
+      <b>ℹ️ Nota:</b> Este es un sistema de recarga simulado para pruebas. 
+      En un sistema real, aquí se integraría con una pasarela de pago.
+    </small>
+  </div>
 </dialog>
 
 <!-- ============================================== -->
