--- a/public/ventas.html
+++ b/public/ventas.html
@@ -173,7 +173,6 @@
   </div>
 </dialog>
 
-
 <!-- Modal Detalle de Compra Individual -->
 <dialog id="modal-detalle-compra" style="width: 90%; max-width: 700px; max-height: 90vh; overflow-y: auto;">
   <button class="btn-modal cerrar-btn btn-x" data-close="modal-detalle-compra" type="button">X</button>
@@ -306,6 +305,8 @@
 	</div>
     </div>
 
+    <canvas id="graph"></canvas>
+
 <footer class="footer">
   
   <div class="wrapper">
@@ -346,5 +347,8 @@
  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
  crossorigin="anonymous"></script>
 <script src="script.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="graficas.js"></script>
 </body>
 </html>
